# flappyship

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
lib/storytime/: CMakeLists.txt
lib/storytime/src/: Engine.cpp  Engine.h
lib/storytime/src/graphics/: OrthographicCameraController.cpp  OrthographicCameraController.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
lib/storytime/src/system/: Random.cpp  Random.h
src/: Flappyship.cpp  Flappyship.h  GameLayer.cpp  GameLayer.h  Level.cpp  Level.h  ParticleEmitter.cpp  ParticleEmitter.h  Player.cpp  Player.h  SpikeManager.cpp  SpikeManager.h  SpikePool.cpp  SpikePool.h  main.cpp
